web-apps/jaejadle-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaejadle-dev
  labels:
    app: jaejadle-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaejadle-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: jaejadle-dev
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: jaejadle-dev
        image: ghcr.io/mayne0213/jaejadle:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: 80Mi
            cpu: 20m
          limits:
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
      restartPolicy: Always
