web-apps/jaejadle-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaejadle-dev
  labels:
    app: jaejadle-dev
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: jaejadle-dev
